# downloads-organizer

./: .gitignore  README.md  pyproject.toml
src/downloads_organizer/: cli.py  constants.py  main.py  models.py  organizer.py  rules.py
